# VC4C

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Readme.md  check_all_files.sh  collect_coverage.sh
.circleci/: clang-format-diff.sh  config.yml
arch_linux/: PKGBUILD  isfast.patch
cmake/: RaspberryPi.cmake  clang-format.cmake  clang.cmake  cpplog.cmake  cpptest-lite.cmake  crosscompile.cmake  deb-postint.in  deb-prerem.in  flags.cmake  libclang.cmake  libllvm.cmake  packaging.cmake  sanitizers.cmake  spirv-headers.cmake  spirv.cmake  tool_paths.h.in  variant.cmake  vc4asm.cmake
doc/: Contributing.md  CrossCompile.md  Frontends.txt  FunctionHandling.txt  Hardware.md  Instructions.txt  Libraries.md  Links.txt  NotSupported.md  OpenCLStdLib.txt  OpenCLVersion.txt  Optimizations.txt  Performance.md  Requirements.md  TODO.txt  Thanks.md  accuracy.txt  performance-excerp.txt  tests.txt
example/: SHA-256.cl  fft2_2.cl  fibonacci.cl  fibonacci.ir  fibonacci.spt  fibonacci_vector.ir  hello_world.ir  hello_world_vector.ir  hello_world_vector_rpi.ir  histogram.cl  md5.cl  out.hex  test.cl  test_cl.cl  test_instructions.cl  test_prime.cl
include/: CompilationError.h  Compiler.h  Optional.h  Precompiler.h  VC4C.h  c_interface.h  config.h  helper.h  tools.h
scripts/: clang-format-diff.sh  run_clang_analyzer.sh  run_clang_tidy.sh
src/: BackgroundWorker.cpp  BackgroundWorker.h  BasicBlock.cpp  BasicBlock.h  BitMask.h  Bitfield.h  CMakeLists.txt  CompilationError.cpp  Compiler.cpp  CompilerInstance.h  ControlFlowGraph.cpp  ControlFlowGraph.h  DebugGraph.cpp  DebugGraph.h  Disassembler.cpp  Expression.cpp  Expression.h  GlobalValues.cpp  GlobalValues.h  Graph.h  HalfType.cpp  HalfType.h  InstructionWalker.cpp  InstructionWalker.h  KernelMetaData.h  Locals.cpp  Locals.h  Logger.h  Method.cpp  Method.h  Module.cpp  Module.h  Optional.h  Parser.h  Precompiler.cpp  ProcessUtil.cpp  ProcessUtil.h  Profiler.cpp  Profiler.h  Register.cpp  (+18 more)
src/analysis/: Analysis.h  AvailableExpressionAnalysis.cpp  AvailableExpressionAnalysis.h  ControlFlowGraph.cpp  ControlFlowGraph.h  ControlFlowLoop.cpp  ControlFlowLoop.h  DataDependencyGraph.cpp  DataDependencyGraph.h  DebugGraph.cpp  DebugGraph.h  DependencyGraph.cpp  DependencyGraph.h  DominatorTree.cpp  DominatorTree.h  FlagsAnalysis.cpp  FlagsAnalysis.h  InterferenceGraph.cpp  InterferenceGraph.h  LifetimeGraph.cpp  LifetimeGraph.h  LivenessAnalysis.cpp  LivenessAnalysis.h  MemoryAnalysis.cpp  MemoryAnalysis.h  PatternMatching.cpp  PatternMatching.h  RegisterAnalysis.cpp  RegisterAnalysis.h  ValueRange.cpp  ValueRange.h  WorkItemAnalysis.cpp  WorkItemAnalysis.h  sources.list
src/asm/: ALUInstruction.cpp  ALUInstruction.h  BranchInstruction.cpp  BranchInstruction.h  CodeGenerator.cpp  CodeGenerator.h  CommentInstruction.cpp  CommentInstruction.h  DebugGraph.cpp  DebugGraph.h  GraphColoring.cpp  GraphColoring.h  Instruction.cpp  Instruction.h  KernelInfo.cpp  KernelInfo.h  LoadInstruction.cpp  LoadInstruction.h  OpCodes.cpp  OpCodes.h  RegisterAllocation.h  RegisterFixes.cpp  RegisterFixes.h  SemaphoreInstruction.cpp  SemaphoreInstruction.h  sources.list
src/intrinsics/: Comparisons.cpp  Comparisons.h  Images.cpp  Images.h  Intrinsics.cpp  Intrinsics.h  Operators.cpp  Operators.h  Others.cpp  Others.h  WorkItems.cpp  WorkItems.h  sources.list
src/llvm/: BitcodeReader.cpp  BitcodeReader.h  IRParser.cpp  IRParser.h  LLVMInstruction.cpp  LLVMInstruction.h  Scanner.cpp  Scanner.h  Token.h  sources.list
src/normalization/: AddressCalculation.cpp  AddressCalculation.h  Inliner.cpp  Inliner.h  LiteralValues.cpp  LiteralValues.h  LongOperations.cpp  LongOperations.h  MemoryAccess.cpp  MemoryAccess.h  MemoryMapChecks.cpp  MemoryMappings.cpp  MemoryMappings.h  Normalizer.cpp  Normalizer.h  Rewrite.cpp  Rewrite.h  sources.list
src/optimization/: Combiner.cpp  Combiner.h  ControlFlow.cpp  ControlFlow.h  DAG.cpp  DAG.h  Eliminator.cpp  Eliminator.h  Flags.cpp  Flags.h  Inliner.cpp  Inliner.h  InstructionScheduler.cpp  InstructionScheduler.h  LiteralValues.cpp  LiteralValues.h  LocalCompression.cpp  LocalCompression.h  Memory.cpp  Memory.h  MemoryAccess.cpp  MemoryAccess.h  Optimizer.cpp  Optimizer.h  Peephole.cpp  Peephole.h  Reordering.cpp  Reordering.h  Scheduler.cpp  Scheduler.h  ValueExpr.cpp  ValueExpr.h  Vector.cpp  Vector.h  Vectorizer.cpp  Vectorizer.h  sources.list
src/periphery/: CacheEntry.cpp  CacheEntry.h  RegisterLoweredMemory.cpp  RegisterLoweredMemory.h  SFU.cpp  SFU.h  TMU.cpp  TMU.h  VPM.cpp  VPM.h  sources.list
src/precompilation/: ClangLibrary.cpp  CompilationData.h  FrontendCompiler.cpp  FrontendCompiler.h  LLVMLibrary.cpp  LLVMLibrary.h  LibClang.cpp  LibClang.h  Precompiler.cpp  TemporaryFile.cpp  sources.list
src/shared/: BinaryHeader.cpp  BinaryHeader.h
src/spirv/: SPIRVBuiltins.cpp  SPIRVBuiltins.h  SPIRVHelper.cpp  SPIRVHelper.h  SPIRVLexer.cpp  SPIRVLexer.h  SPIRVOperation.cpp  SPIRVOperation.h  SPIRVParser.cpp  SPIRVParser.h  SPIRVParserBase.cpp  SPIRVParserBase.h  SPIRVToolsParser.cpp  SPIRVToolsParser.h  sources.list
src/tools/: Emulator.cpp  Emulator.h  SmallMap.h  SmallSet.h  options.cpp  sources.list
test/: ArithmeticTests.cpp  CMakeLists.txt  ConversionTests.cpp  EmulationRunner.h  FloatTests.cpp  IntegerTests.cpp  MathTests.cpp  MemoryTests.cpp  RegressionTest.cpp  RegressionTest.h  RelationalTests.cpp  TestAnalyses.cpp  TestAnalyses.h  TestArithmetic.cpp  TestArithmetic.h  TestCommonFunctions.cpp  TestCommonFunctions.h  TestCompilationHelper.h  TestConversionFunctions.cpp  TestConversionFunctions.h  TestCustomContainers.cpp  TestCustomContainers.h  TestData.cpp  TestData.h  TestEmulator.cpp  TestEmulator.h  TestEntries.h  TestExpressions.cpp  TestExpressions.h  TestFrontends.cpp  TestFrontends.h  TestGeometricFunctions.cpp  TestGeometricFunctions.h  TestGraph.cpp  TestGraph.h  TestInstructions.cpp  TestInstructions.h  TestIntegerFunctions.cpp  TestIntegerFunctions.h  TestInternalLibs.cpp  (+39 more)
testing/: efficiency_test.cl  icd_test.ir  (+44 more)
tools/: CMakeLists.txt  emulator.cpp  generate_overloads.cpp
(+186 files in other folders)
